# fractal-vortex-blockchain

./: .env.example  .gitignore  API_DOWNLOAD_IMPLEMENTATION.md  CHANGED_FILES_LIST.md  CLOUD_SERVER_STATUS.md  Cargo.toml  DEPLOYMENT_SUCCESS_SUMMARY.md  DNS_CONFIGURATION_GUIDE.md  DNS_MONITORING_SCRIPT.sh  DNS_PROPAGATION_SOLUTION.md  DNS_STATUS_UPDATE.md  DNS_WWW_CONFIGURATION_GUIDE.md  Dockerfile  FINAL_IMPLEMENTATION_STATUS.md  FVCHAIN_NATIVE_ADDRESS_IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  MAINNET_DEPLOYMENT_GUIDE.md  MIXED_CONTENT_FIX_SUMMARY.md  README.md  README_GITHUB.md  REBUILT_MAINNET_README.md  RECOVERY_DEVICE_BARU.md  SECURITY.md  SERVER_IMPLEMENTATION_STATUS.md  SSL_DOMAIN_SOLUTION.md  SSL_IMPLEMENTATION_STATUS.md  SSL_SETUP_COMPLETE.md  SSL_SUCCESS_SUMMARY.md  TRANSACTION_FEE_SYSTEM.md  WALLET_CROSS_DEVICE_GUIDE.md  WALLET_NEW_DEVICE_SETUP.md  WHITEPAPER_ENGLISH.md  WHITEPAPER_INDONESIA.md  WHITEPAPER_README.md  WHITEPAPER_UPDATE_SUMMARY.md  WHITEPAPER_UPDATE_TEMPLATE.md  artikel-fractal-vortex-chain.md  artikel-fvc-indonesia.md  artikel-media-sosial-fvc.md  build-on-server.ps1  (+99 more)
dapp/browser-extension/: manifest.example.json
dapp/browser-extension/src/config/: networks.example.ts
dapp/core/src/api/: fvchainApi.example.ts
dapp/core/src/config/: networks.example.ts
deploy/: fvc-mainnet.service  install.sh  mainnet-genesis.json  security-config.toml
examples/: security_usage.rs
sdk/: README.md  fvchain-sdk.js  fvchain_sdk.py  package.json  setup.py
src/: api_auth.rs  api_monitoring.rs  input_validation.rs  lib.rs  main.rs  mobile_api.rs  rate_limiter.rs  rpc_storage.rs
src/consensus/: difficulty_adjuster.rs  fractal_vortex.rs  mining_engine.rs  mining_rewards.rs  mod.rs  vortex_consensus.rs
src/crypto/: fractal_hash.rs  mod.rs
src/mining/: auto_detection.rs  mod.rs
src/network/: mod.rs  torus_topology.rs
src/node/: ecosystem_miner.rs  fractal_node.rs  mod.rs
src/security/: anomaly_detection.rs  audit.rs  chaos_testing.rs  integration.rs  mod.rs  monitoring.rs  verification.rs
src/shared/: mod.rs
src/storage/: mod.rs
src/wallet/: README.md  cli.rs  key_manager.rs  mod.rs  rpc_client.rs  transaction.rs  wallet.rs
tests/: integration_test.rs  security_tests.rs
