[package]
name = "fractal-vortex-chain"
version = "0.1.0"
edition = "2021"
description = "Revolutionary blockchain combining fractal self-similarity with vortex mathematics"
authors = ["FVC Core Team"]
license = "MIT"
repository = "https://github.com/fractalvortex/fvc-protocol"

[[bin]]
name = "fvc-node"
path = "src/main.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# P2P networking
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "request-response"] }

# Basic cryptography
sha3 = "0.10"
blake3 = "1.5"

# WebSocket & async utilities
tokio-tungstenite = "0.21"
futures-util = "0.3"
chrono = "0.4"

# Wallet dependencies
reqwest = { version = "0.11", features = ["json"] }
libp2p-identity = { version = "0.2", features = ["ed25519"] }
hex = "0.4"
bs58 = "0.5"

# Logging
env_logger = "0.10"
log = "0.4"

# Mnemonic support
bip39 = "2.0"

# Additional dependencies
rand = "0.8"
thiserror = "1.0"
axum = "0.7"
# Added tower-http for CORS support
tower-http = { version = "0.5", features = ["cors"] }

# Concurrency utilities
once_cell = "1.18"
# Stream utilities
tokio-stream = { version = "0.1", features = ["sync"] }

# Persistent storage
rocksdb = "0.21"

# Security & Analysis dependencies
statrs = "0.16"
proptest = "1.0"
ndarray = "0.15"
ndarray-rand = "0.14"
toml = "0.8"

[[bin]]
name = "fvc-wallet"
path = "src/bin/wallet-cli.rs"

[[bin]]
name = "fvc-rpc"
path = "src/bin/rpc-server.rs"

[dev-dependencies]
tempfile = "3.0"